examples/datalog/32_math/21_exponential.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_exp
Knowledge graph 'test_exp' created.
Switched to knowledge graph: test_exp
> .kg use test_exp
Switched to knowledge graph: test_exp
> +vals[(0,), (1,), (2,)].
Inserted 3 fact(s) into 'vals'.
> exp_val(X, Y) :- vals(X), Y = EXP(X).
Script error: Parse error: Invalid term: 'EXP(X)'
